--- a/html/matchform.html
+++ b/html/matchform.html
@@ -32,27 +32,27 @@
           <div id="form1" class="inactive kommunForm">
             <h3>Välj kommun</h3>
             <label class="form-control">
-              <input type="checkbox" name="checkbox" value="Stockholm" />
+              <input type="checkbox" name="cityChoice[]" value="Stockholm" />
               stocklandia
             </label>
             <label class="form-control">
-              <input type="checkbox" name="checkbox" value="Stockholm" />
+              <input type="checkbox" name="cityChoice[]" value="Stockholm" />
               något annat ställe i stockholm
             </label>
             <label class="form-control">
-              <input type="checkbox" name="checkbox" value="Stockholm" />
+              <input type="checkbox" name="cityChoice[]" value="Stockholm" />
               Lidingö
             </label>
             <label class="form-control">
-              <input type="checkbox" name="checkbox" value="Stockholm" />
+              <input type="checkbox" name="cityChoice[]" value="Stockholm" />
               därkungenbor
             </label>
             <label class="form-control">
-              <input type="checkbox" name="checkbox" value="Stockholm" />
+              <input type="checkbox" name="cityChoice[]" value="Stockholm" />
               Riksdagshuset
             </label>
             <label class="form-control">
-              <input type="checkbox" name="checkbox" value="Stockholm" />
+              <input type="checkbox" name="cityChoice[]" value="Stockholm" />
               AlexSchulmans sophus
             </label>
           </div>
@@ -60,27 +60,27 @@
           <div id="form2" class="inactive kommunForm">
             <h3>Välj kommun</h3>
             <label class="form-control">
-              <input type="checkbox" name="checkbox" value="Malmö" />
+              <input type="checkbox" name="cityChoice[]" value="Malmö" />
               Malmö
             </label>
             <label class="form-control">
-              <input type="checkbox" name="checkbox" value="Malmö" />
+              <input type="checkbox" name="cityChoice[]" value="Malmö" />
               Lund
             </label>
             <label class="form-control">
-              <input type="checkbox" name="checkbox" value="Malmö" />
+              <input type="checkbox" name="cityChoice[]" value="Malmö" />
               Kristianstad
             </label>
             <label class="form-control">
-              <input type="checkbox" name="checkbox" value="Malmö" />
+              <input type="checkbox" name="cityChoice[]" value="Malmö" />
               Helsingborg
             </label>
             <label class="form-control">
-              <input type="checkbox" name="checkbox" value="Malmö" />
+              <input type="checkbox" name="cityChoice[]" value="Malmö" />
               Landskrona
             </label>
             <label class="form-control">
-              <input type="checkbox" name="checkbox" value="Malmö" />
+              <input type="checkbox" name="cityChoice[]" value="Malmö" />
               Ystad
             </label>
           </div>
@@ -88,27 +88,27 @@
           <div id="form3" class="inactive kommunForm">
             <h3>Välj kommun</h3>
             <label class="form-control">
-              <input type="checkbox" name="checkbox" value="Göteborg" />
+              <input type="checkbox" name="cityChoice[]" value="Göteborg" />
               gammel
             </label>
             <label class="form-control">
-              <input type="checkbox" name="checkbox" value="Göteborg" />
+              <input type="checkbox" name="cityChoice[]" value="Göteborg" />
               röda torget
             </label>
             <label class="form-control">
-              <input type="checkbox" name="checkbox" value="Göteborg" />
+              <input type="checkbox" name="cityChoice[]" value="Göteborg" />
               håkanhellström
             </label>
             <label class="form-control">
-              <input type="checkbox" name="checkbox" value="Göteborg" />
+              <input type="checkbox" name="cityChoice[]" value="Göteborg" />
               måsarna
             </label>
             <label class="form-control">
-              <input type="checkbox" name="checkbox" value="Göteborg" />
+              <input type="checkbox" name="cityChoice[]" value="Göteborg" />
               Norje
             </label>
             <label class="form-control">
-              <input type="checkbox" name="checkbox" value="Göteborg" />
+              <input type="checkbox" name="cityChoice[]" value="Göteborg" />
               Ullevi
             </label>
           </div>
@@ -119,7 +119,7 @@
 
             <div class="radio_div_one">
               <div>
-                <input type="radio" id="" name="option1" value="1" />
+                <input type="radio" id="" name="option1" value="1" checked />
                 <label for="option1"> Distans </label>
                 <input type="radio" id="" name="option1" value="2" />
                 <label for="option2"> På plats </label>
@@ -127,25 +127,25 @@
             </div>
             <div class="radio_div_two">
               <div>
-                <input type="radio" id="" name="option1" value="1" />
+                <input type="radio" id="" name="option2" value="1" checked/>
                 <label for="option1"> Jobba ensam </label>
-                <input type="radio" id="" name="option1" value="2" />
+                <input type="radio" id="" name="option2" value="2" />
                 <label for="option2"> Jobba i grupp </label>
               </div>
             </div>
             <div class="radio_div_three">
               <div>
-                <input type="radio" id="" name="option1" value="1" />
+                <input type="radio" id="" name="option3" value="1" checked/>
                 <label for="option1"> Casual </label>
-                <input type="radio" id="" name="option1" value="2" />
+                <input type="radio" id="" name="option3" value="2" />
                 <label for="option2"> Business </label>
               </div>
             </div>
             <div class="radio_div_four">
               <div>
-                <input type="radio" id="" name="option1" value="1" />
+                <input type="radio" id="" name="option4" value="1" checked/>
                 <label for="option1"> Biblotek </label>
-                <input type="radio" id="" name="option1" value="2" />
+                <input type="radio" id="" name="option4" value="2" />
                 <label for="option2"> Disco </label>
               </div>
             </div>
@@ -154,41 +154,41 @@
 
             <div class="radio_div_five">
               <div>
-                <input type="radio" id="" name="option1" value="1" />
+                <input type="radio" id="" name="option5" value="1" checked/>
                 <label for="option1"> Extrovet </label>
-                <input type="radio" id="" name="option1" value="2" />
+                <input type="radio" id="" name="option5" value="2" />
                 <label for="option2"> Introvert </label>
               </div>
             </div>
             <div class="radio_div_six">
               <div>
-                <input type="radio" id="" name="option1" value="1" />
+                <input type="radio" id="" name="option6" value="1" checked/>
                 <label for="option1"> Festliv </label>
-                <input type="radio" id="" name="option1" value="2" />
+                <input type="radio" id="" name="option6" value="2" />
                 <label for="option2"> Familjeliv </label>
               </div>
             </div>
             <div class="radio_div_seven">
               <div>
-                <input type="radio" id="" name="option1" value="1" />
+                <input type="radio" id="" name="option7" value="1" checked/>
                 <label for="option1"> Öga för detalj </label>
-                <input type="radio" id="" name="option1" value="2" />
+                <input type="radio" id="" name="option7" value="2" />
                 <label for="option2"> Se helheten </label>
               </div>
             </div>
             <div class="radio_div_eight">
               <div>
-                <input type="radio" id="" name="option1" value="1" />
+                <input type="radio" id="" name="option8" value="1" checked/>
                 <label for="option1"> Iniativtagande </label>
-                <input type="radio" id="" name="option1" value="2" />
+                <input type="radio" id="" name="option8" value="2" />
                 <label for="option2"> Genomtänkt </label>
               </div>
             </div>
             <div class="radio_div_ninth">
               <div>
-                <input type="radio" id="" name="option1" value="1" />
+                <input type="radio" id="" name="option9" value="1" checked/>
                 <label for="option1"> Strukturerad</label>
-                <input type="radio" id="" name="option1" value="2" />
+                <input type="radio" id="" name="option9" value="2" />
                 <label for="option2"> Kreativ </label>
               </div>
             </div>
@@ -196,11 +196,11 @@
           <div>
             <div id="liaType">
               <h2>Vad för lia-plats söker du?</h2>
-              <input type="radio" id="" name="option1" value="Frontend" />
+              <input type="radio" id="" name="option10" value="frontend" checked/>
               <label for="option1"> Frontend </label>
-              <input type="radio" id="" name="option1" value="Backend" />
+              <input type="radio" id="" name="option10" value="backend" />
               <label for="option2"> Backend </label>
-              <input type="radio" id="" name="option1" value="B2B" />
+              <input type="radio" id="" name="option10" value="b2b" />
               <label for="option2"> B2B </label>
             </div>
           </div>
