--- a/html/addcompany.html
+++ b/html/addcompany.html
@@ -8,7 +8,7 @@
   <link rel="stylesheet" href="../style/style.css">
   <script src="../script/adminform.js" type="module"></script>
   <link href="https://fonts.googleapis.com/css2?family=Inter" rel="stylesheet">
-  <title>Lägg till företag - admin</title>
+  <title>Lägg till företag - Admin</title>
 </head>
 
 <body>
