--- a/html/matches.html
+++ b/html/matches.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Document</title>
+  <title>Dina matchningar</title>
   <link href="https://fonts.googleapis.com/css2?family=Inter" rel="stylesheet">
   <link rel="stylesheet" href="../style/style.css" />
   <link rel="stylesheet" href="../style/matches.css" />
@@ -19,7 +19,7 @@
     </div>
     <ul>
       <li><a href="../index.html">Startsida</a></li>
-      <li><a href="./profile.html">Profil</a></li>
+      <li><a href="./profile.html">Min profil</a></li>
     </ul>
   </nav>
   <main class="matching_site_main">
