--- a/html/matchform.html
+++ b/html/matchform.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Document</title>
+  <title>Matchningsformulär</title>
   <link rel="stylesheet" href="../style/style.css" />
   <script src="../script/studentForm.js" defer></script>
   <link href="https://fonts.googleapis.com/css2?family=Inter" rel="stylesheet">
@@ -18,7 +18,7 @@
     </div>
     <ul>
       <li><a href="../index.html">Startsida</a></li>
-      <li><a href="./profile.html">Profil</a></li>
+      <li><a href="./profile.html">Min profil</a></li>
     </ul>
   </nav>
   <main class="main_form_site">
