new logo + made it clickable

--- a/html/admin.html
+++ b/html/admin.html
@@ -15,7 +15,9 @@
 <body>
   <nav>
     <div class="navbar_icon">
-      <img src="../img/digitalia.png" alt="icon" />
+      <a href="../index.html">
+        <img src="../img/digitalia.png" alt="icon" />
+      </a>
     </div>
     <ul>
       <li><a href="addcompany.html">Lägg till företag</a></li>
