--- a/html/login.html
+++ b/html/login.html
@@ -9,6 +9,18 @@
     <link href="https://fonts.googleapis.com/css2?family=Inter" rel="stylesheet">
 </head>
 <body>
+    <nav>
+        <div class="navbar_icon">
+          <a href="../index.html">
+            <img src="../img/digitalia.png" alt="icon" />
+          </a>
+        </div>
+        <ul>
+          <li><a href="../index.html">Startsida</a></li>
+          <li><a href="./profile.html">Min profil</a></li>
+        </ul>
+      </nav>
+      
     <div>
         <div>
             Jag vill...
