--- a/html/profile.html
+++ b/html/profile.html
@@ -14,7 +14,9 @@
 <body>
     <nav>
         <div class="navbar_icon">
-            <img src="../img/digitalia.png" alt="icon" />
+            <a href="../index.html">
+                <img src="../img/digitalia.png" alt="icon" />
+              </a>
         </div>
         <ul>
             <li><a href="../index.html">Startsida</a></li>
