--- a/html/matchform.html
+++ b/html/matchform.html
@@ -8,7 +8,7 @@
   <title>Matchningsformulär</title>
   <link rel="stylesheet" href="../style/style.css" />
   <script src="../script/studentForm.js" defer></script>
-  <link href="https://fonts.googleapis.com/css2?family=Inter" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
 </head>
 
 <body>
