--- a/html/addcompany.html
+++ b/html/addcompany.html
@@ -7,7 +7,7 @@
   <link rel="shortcut icon" href="#" type="image/x-icon">
   <link rel="stylesheet" href="../style/style.css">
   <script src="../script/adminform.js" type="module"></script>
-  <link href="https://fonts.googleapis.com/css2?family=Inter" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
   <title>Lägg till företag - Admin</title>
 </head>
 
