--- a/html/login.html
+++ b/html/login.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Inloggning</title>
     <script src="../script/login.js" defer></script>
-    <link href="https://fonts.googleapis.com/css2?family=Inter" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
 </head>
 <body>
     <nav>
@@ -20,7 +20,7 @@
           <li><a href="./profile.html">Min profil</a></li>
         </ul>
       </nav>
-      
+
     <div>
         <div>
             Jag vill...
