--- a/html/profile.html
+++ b/html/profile.html
@@ -8,7 +8,7 @@
     <title>Min profil</title>
     <script src="../script/profile.js" defer></script>
     <link rel="stylesheet" href="../style/profile.css">
-    <link href="https://fonts.googleapis.com/css2?family=Inter" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
 </head>
 
 <body>
