--- a/html/matchform.html
+++ b/html/matchform.html
@@ -6,11 +6,31 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Matchningsformulär</title>
+
   <link rel="stylesheet" href="../style/style.css" />
-  <script src="../script/studentForm.js" defer></script>
+  <script src="../script/studentForm.js" type="module"></script>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
 </head>
-
+<body>
+  <nav>
+    <div class="navbar_icon">
+      <a href="../index.html">
+        <img src="../img/digitalia.png" alt="icon" />
+      </a>
+    </div>
+    <ul>
+      <li><a href="../index.html">Startsida</a></li>
+      <li><a href="./profile.html">Min profil</a></li>
+    </ul>
+  </nav>
+  <main class="main_form_site">
+    <div class="div_for_form_information">
+      <form action="" id="studentForm">
+        <div id="studentCityChoice">
+          <h2>Var vill du söka din lia-plats?</h2>
+          <button class="button-46" id="btn1">Stockholms län</button>
+          <button class="button-46" id="btn2">Skåne</button>
+          <button class="button-46" id="btn3">Något götaland</button>
             <div id="form1" class="inactive kommunForm">
               <div>
                 <h3>Välj kommun</h3>
