edit styling profile

--- a/html/profile.html
+++ b/html/profile.html
@@ -8,6 +8,7 @@
     <title>Min profil</title>
     <script src="../script/profile.js" defer></script>
     <link rel="stylesheet" href="../style/profile.css">
+    <link rel="stylesheet" href="../style/style.css">
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&display=swap"
         rel="stylesheet">
 </head>
@@ -37,8 +38,10 @@
             <input type="text" id="student-link1" disabled>
             <input type="text" id="student-link2" disabled>
             <input type="text" id="student-link3" disabled>
-            <button id="edit-info">REDIGERA</button>
-            <button id="match-btn"><a href="./matchform.html">BÖRJA MATCHA!</a></button>
+            <div id="profile-buttons">
+                <button id="edit-info">REDIGERA</button>
+                <button id="match-btn"><a href="./matchform.html">BÖRJA MATCHA!</a></button>
+            </div>
         </div>
         <div id="right-side">
                 <label for="student-about" id="label-about">Om mig</label>
