--- a/html/login.html
+++ b/html/login.html
@@ -6,9 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Inloggning</title>
     <script src="../script/login.js" defer></script>
+    <link rel="stylesheet" href="../style/style.css" />
+    <link rel="stylesheet" href="../style/loginsignup.css" />
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
 </head>
-<body>
+
     <nav>
         <div class="navbar_icon">
           <a href="../index.html">
@@ -19,11 +21,13 @@
           <li><a href="../index.html">Startsida</a></li>
           <li><a href="./profile.html">Min profil</a></li>
         </ul>
-      </nav>
+    </nav>
 
-    <div>
+
+    <main>
         <div>
-            Jag vill...
+        <div id="decide-div">
+        <p>Jag vill...</p> 
             <button id="login-btn">Logga in</button>
             <button id="signup-btn">Skapa ett konto</button>
         </div>
@@ -44,15 +48,8 @@
 
             <select name="" id="school-select">
                 <option selected hidden>Min skola</option>
-                <!-- <option value="gritAcademy">Grit Academy</option>
-                <option value="secondSchool">Skola 2</option>
-                <option value="thirdSchool">Skola 3</option> -->
             </select>
             <select name="" id="prog-select" disabled required>
-                <!-- <option selected hidden>Min utbildning</option>
-                <option value="" id="opt1"></option>
-                <option value="" id="opt2"></option>
-                <option value="" id="opt3"></option> -->
             </select>
 
             <label for="signup-mail">E-post</label>
@@ -60,15 +57,18 @@
             <label for="signup-password">Lösenord</label>
             <input type="text" id="signup-password" required>
             <label for="about-me">Om mig</label>
-            <textarea id="about-me" cols="30" rows="10"></textarea>
+            <textarea id="about-me" cols="30" rows="2"></textarea>
             <div id="links">
                 <label for="link1 link2 link3">Länkar</label>
-                <input type="text" id="link1" placeholder="ex CV">
-                <input type="text" id="link2" placeholder="ex Linkedin">
-                <input type="text" id="link3" placeholder="ex GitHub">
+                <div id="linksdiv">
+                    <input type="text" id="link1" placeholder="ex CV">
+                    <input type="text" id="link2" placeholder="ex Linkedin">
+                    <input type="text" id="link3" placeholder="ex GitHub">
+                </div>
             </div>
-            <button id="signup-user-btn">Registrera!</button>
+            <button id="signup-user-btn">Registrera</button>
         </form>
-    </div>
+        </div>
+    </main>
 </body>
 </html>
